8281936: compiler/arguments/TestCodeEntryAlignment.java fails on AVX512 machines

Reviewed-by: shade, kvn